--- a/raon-control/timeleap.html
+++ b/raon-control/timeleap.html
@@ -36,16 +36,20 @@
 
     <div style="height:20px"></div>
 
-    <div id="snapshot-list-contain">
-        <div class="title-box" id="snapshot-list-title" style="display: inline-block;">Snapshot List</div>
-        <div id="snapshot-list-button-group">
-            <button class="record-config-button" onclick="compareSnapshot()">Compare</button>
-            <button class="record-config-button"
-                onclick="document.getElementById('snapshot-list-contain').style.display='none'"
-                id="close">Close</button>
+    <div id="snapshot-list-body">
+        <div style="position:relative; width:800px; margin:auto; margin-top: 20px;">
+            <div class="title-box" id="snapshot-list-title" style="display: inline-block; margin:auto; left:0px;">
+                Snapshot List</div>
+            <div id="snapshot-list-button">
+                <button class="snapshot-list-config-button" onclick="compareSnapshot()">Compare</button>
+                <button class="snapshot-list-config-button"
+                    onclick="document.getElementById('snapshot-list-body').style.display='none'"
+                    id="close">Close</button>
+            </div>
         </div>
-        
-        <table id="snapshot-compare-table" style="position: relative; margin: auto;">
+
+        <table id="snapshot-compare-table"
+            style="position: relative; margin: auto; box-shadow: 0 15px 50px rgba(0, 0, 0, 1.0);">
             <thead id="snapshot-compare-tableHead" style="font-family: Roboto-Light"></thead>
             <tbody id="snapshot-compare-tableBody"></tbody>
         </table>
@@ -219,7 +223,6 @@
             <div class="title-box" style="display: inline-block; width:50px;">Todo</div>
             <div class="title-bar under-bar" style="--barColor: #ec2227;"></div>
 
-            <button onclick="showSnapshotListTable()">Compare</button>
 
             <div id="todo-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                 ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -231,7 +234,9 @@
 
         <!-- Center -->
         <div id="body-center">
-
+            <div style="width: 100%; height: 40px; background-color: aqua;">
+                <button class="show-snapshot-list-button" onclick="showSnapshotListTable()">Compare</button>
+            </div>
         </div>
 
         <!-- Right -->
@@ -1125,7 +1130,7 @@
 
     function compareSnapshot() {
         // Close Snapshot List Table
-        document.getElementById('snapshot-list-contain').style.display = 'none';
+        document.getElementById('snapshot-list-body').style.display = 'none';
 
         // Stop Record List Table Update and Hide Table, Config Button
         clearInterval(recordConnectionIntervalID);
@@ -1256,7 +1261,9 @@
         compareSnapshotList = [];
 
         createSnapshotTable();
-        document.getElementById('snapshot-list-contain').style.display = 'block';
+        document.getElementById('snapshot-list-body').style.display = 'block';
+        document.getElementById('snapshot-list-body').style.transition = 'all 1s';
+        document.getElementById('snapshot-list-body').style.backdropFilter = 'blur(5px)';
     }
 
     window.onload = function () {
